Error en handlebars

--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "segundapreentrega",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "handlebars": "^4.7.8",
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
     "router": "^1.3.8"
