--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^7.1.2",
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "toastify-js": "^1.12.0"
   }
 }
